--- a/ScintillatorPaper/ScintillatorPaper.tex
+++ b/ScintillatorPaper/ScintillatorPaper.tex
@@ -1,6 +1,7 @@
 \documentclass{JINST}
 
 \usepackage{graphicx,subfigure}
+\let\ifpdf\relax 
 
 \title{Optimizing Liquid Scintillators for Low Energy Events via Wavelength-Shifter and Quantum-Dot Doping} 
 
@@ -10,7 +11,7 @@
 %%\llap{$^c$}University of California, Berkeley, Berkeley, CA 94704, USA\\
 E-mail: \email{rschofield@physics.ucla.edu}}
 
-\abstract{The composition of liquid scintillators are extremely versatile. This adaptablility allows liquid scintillators to be tuned for low energy events, in partilcular, optimization of the light yield and transparency of the scintillator to Cherenkov radiation. In this study, the light yield of seven potential solvents are presented: Toluene, Pseudocumene (PC), Linear Alkyl Benzene (LAB), Phenylcyclohexane (PCH), Phenyl-o-Xylyl Ethane (PXE) and two grades of Di-Isopropyl Napthalene (DIN). The wavelength-shifter 2,5-Diphenyloxazole (PPO) is utilized in various concentrations to study the light yield of binary scintillator mixtures. The experimental data is then fit to a model for the light yield dependence on the PPO concentration. The fit results provide insight about the energy transfer processes in the liquid scintillator mixtures and determine the optimal PPO concentration for each solvent. In addition, the optical properties of 2~g/L PPO in toluene doped with quantum-dots (QDs) are explored. QDs ability to re-sculpt the absorption and emission spectrum of liquid scintillators demonstrate that QDs are viable canidates for conserving the Cherenkov photons produced by interactions in the liquid scintillator.}
+\abstract{Liquid scintillator can be made more sensitive to low energy events by increasing light yield and enabling direction reconstruction of particles. This study measures the light yield of seven different scintillators (Toluene, Pseudocumene (PC), Linear Alkyl Benzene (LAB), Phenylcyclohexane (PCH), Phenyl-o-Xylyl Ethane (PXE) and two grades of Di-Isopropyl Napthalene (DIN)), and models the light yield as a function of the concentration of wavelength-shifter 2,5-Diphenyloxazole (PPO) in order to determine the optimal PPO concentration for each solvent. In addition, the optical properties of 2~g/L PPO in toluene doped with quantum-dots (QDs) are measured. QDs' ability to fine-tune the absorption and emission spectrum of liquid scintillators demonstrate that QDs are viable candidates for conserving the Cherenkov photons produced by interactions in the liquid scintillator.}
 
 \begin{document}
 
@@ -33,7 +34,7 @@ E-mail: \email{rschofield@physics.ucla.edu}}
 %Currently, there are two liquid scintillator 0$\nu\beta\beta$ experiments that are running or will be running in the near future: KamLAND-Zen \cite{kamlandzen13} has already set a competitive limit for the 0$\nu\beta\beta$ half-life of $^{136}$Xe, and the SNO+ experiment with $^{130}$Te is under construction \cite{snoplus10,hartnell12}. Liquid scintillators can be scaled easily to large volumes, and increasing the volume to surface area ratio of the detector can minimize external backgrounds. Energy resolution is crucial in order to obtain sufficient separation between signal and background, including the irreducible background from 2$\nu\beta\beta$. The light yield is directly linked to the energy resolution in liquid scintillator detectors. This work contributes to the effort of optimizing the light yield of candidate scintillator mixtures, including QD doped scintillators. QDs may even help reduce the background further by allowing reconstruction of events via Cherenkov radiation in the scintillator which will allow background signals to be rejected.
 
 \subsection{Liquid Scintillators}
-As charged particles propagate through a scintillator, electrons in the $\pi$-bonds of the aromatic rings are readily excited \cite{birks64}. Since solvent molecules are present in high abundance, interaction with solvent molecules is likely. The absorption and emission spectra of a single-molecule based scintillator overlaps. In order to prevent degradation of efficiency due to the re-absorption of scintillation light by the scintillator, the scintillator is mixed with a wavelength-shifter, solute, that absorbs the energy from the excited electron and subsequently releases light of a longer wavelength to which the scintillator is more transparent.  Optimizing the energy transfer between solvent and solute molecules maximizes the light yield. The light yield is the number of photons produced per deposited energy. Light yield is a key property of the scintillator because it is directly related to the energy resolution of the detector.
+When charged particles propagate through a scintillator, electrons in the $\pi$-bonds of the aromatic rings are readily excited \cite{birks64}. Due to high abundance of solvent molecules, interaction with solvent molecules is likely. The absorption and emission spectra of a single-molecule based scintillator overlap. In order to prevent degradation of efficiency due to the reabsorption by the scintillator of scintillation light, the scintillator is mixed with a wavelength shifter that absorbs the energy from the excited electron and subsequently releases light of a longer wavelength to which the scintillator is more transparent. Light yield, the number of photons produced per deposited energy, is a vital property of the scintillator because it relates directly to the energy resolution a scintillator-based detector. Optimizing the energy transfer between solvent and solute molecules maximizes the light yield.
 
 \begin{table}
 \caption{Solvents and solute names or abbreviations used in this paper, the corresponding IUPAC names, CAS numbers and information on the source of the chemicals. \label{solvents_table}}
@@ -71,7 +72,7 @@ As charged particles propagate through a scintillator, electrons in the $\pi$-bo
 
 % One of the overarching themes of this paper is to identify solvents with generally high light yields and the light yield dependences on solute concentration. The candidates we studied are listed in table \ref{solvents_table}. PPO is used as a wavelength-shifter. 
  
-In addition to testing the light yield of the various liquid scintillator candidates listed in Table \ref{solvents_table}, the concentration of PPO, solute, in each sample is also varied; the relative light yields are compared. There are two main effects important in the description of the PPO concentration dependency. First, the efficiency of energy transfer from solvent to solute increases with increasing PPO concentration. At the studied PPO concentrations the energy transfers are predominantly non-radiative F\"orster energy transfers \cite{foerster48,foerster59}, but the emission and re-absorption of real photons or collision energy transfer and others \cite{dexter53} can also contribute to the overall effective energy transfer rate. Second, there is the competing effect of self-quenching \cite{birks64} which becomes more important at higher PPO concentrations. In this process two PPO molecules interact with each other and no light is emitted. The light yield $I(c_{PPO})$ as a function of PPO concentration $c_{PPO}$ can be described by 
+In addition to measuring the light yield of the various liquid scintillator candidates listed in Table \ref{solvents_table}, the concentration of PPO (the solute) in each scintillator candidate is varied and the relative light yields of these binary scintillator mixtures are compared. PPO concentration effects the light yield through two competing mechanisms. The efficiency of energy transfer from solvent to solute increases with increasing PPO concentration. At the studied PPO concentrations, the energy transfers are predominantly non-radiative F\"orster energy transfers \cite{foerster48,foerster59}, but the emission and re-absorption of real photons or collision energy transfer and others \cite{dexter53} also contribute to the overall effective energy transfer rate. There also is the effect of self-quenching \cite{birks64} which becomes more important at higher PPO concentrations. In this process two PPO molecules interact with each other and no light is emitted. The light yield $I(c_{PPO})$ as a function of PPO concentration $c_{PPO}$ can be described by 
 \begin{equation}
 \label{fit_eq}
 I(c_{PPO})=p_1 \cdot \frac{1}{1+p_2/c_{PPO}} \cdot \frac{1}{1+p_3\cdot c_{PPO}}
@@ -79,11 +80,11 @@ I(c_{PPO})=p_1 \cdot \frac{1}{1+p_2/c_{PPO}} \cdot \frac{1}{1+p_3\cdot c_{PPO}}
 with three solvent-specific parameters $p_1$, $p_2$ and $p_3$. For details on the derivation of these types of equations see \cite{buck07,aberle11} and references therein. The maximum light yield without self-quenching is characterized by $p_1$, the effectiveness of energy transfer from solvent molecules to solute molecules corresponds to $p_2$ and the effect of self-quenching is described by $p_3$.
 
 \subsection{Quantum-Dots}\label{qd_sec}
-Quantum-Dots are semiconducting nanocrystals. The size of a QD is inversely proportional to its band gap and therefore proportional to the wavelength of light it absorbs and emits. Doping the scintillator with QDs enables the absorbed and emitted wavelength to be tuned. These features of the QDs can be exploited improve liquid scintillators as follows.
+Quantum-Dots are semiconducting nanocrystals. The size of a QD is inversely proportional to its band gap and therefore proportional to the wavelength of light it absorbs and emits. Doping scintillator with QDs enables the absorbed and emitted wavelength to be tuned and ultimately can be used to minimize background signals by obtaining a directional signal from low energy events through the following process \cite{lindley14}.
 
-Cherenkov radiation is emitted whenever a charged particle travels through a medium at a speed greater than the phase velocity of light in that medium. Unlike scintillation light that is emitted isotropically, Cherenkov light is radiated in a cone which is directionally relevant to the incident particle. The Cherenkov photons are not monochromatic and have an energy distribution. Doping the scintillator with QDs that absorb and emit only high energy photons enables the longer wavelengths of Cherenkov light to travel toward the detector unimpeded by scintillation process. Because long wavelengths travel faster than short wavelengths of light in a medium due to chromatic dispersion, and the scintillation absorption and emission process takes time, the long wavelengths of Cherenkov light will reach the detector before the scintillation light. The difference in arrival times allows the two types of light to be distinguished. Furthermore, adding QDs to the scintillator solvent generally narrows the absorption spectrum of the liquid scintillator. This is vital for low energy events. For example, a 1~MeV electron emits only 83 Cherenkov photons between 370-550 nm\cite{lindley14}; therefore, it is imperative that the scintillator absorption spectrum is minimized as much as possible. The measured Cherenkov light can be used for reconstructing trajectory of particles cite\cite{lindley14}, thus eliminating background signals.
+Cherenkov radiation is emitted whenever a charged particle travels through a medium at a speed greater than the phase velocity of light in that medium. Unlike scintillation light that is emitted isotropically, Cherenkov light is radiated in a cone that contains the directional information of the incident particle. Cherenkov light is multi-chromatic and has a broad energy distribution. Doping the scintillator with QDs that absorb and emit only high energy photons enables the longer wavelengths of Cherenkov light to travel toward the detector unimpeded by the scintillation process. Because long wavelengths travel faster than short wavelengths of light in a medium due to chromatic dispersion and because the scintillation absorption and emission process takes time, the long wavelengths of Cherenkov light will reach the detector before the scintillation light, enabling measurement of Cherenkov light and ultimately directional reconstruction of particle trajectory.  Furthermore, adding QDs to the scintillator solvent generally narrows the absorption spectrum of the liquid scintillator. Narrowing the absorption spectrum of the scintillator is important because for low energy events, there are very few long-wavelength photons emitted. For example, a 1~MeV electron emits only 83 Cherenkov photons between 370-550 nm\cite{lindley14}. 
 
-Unfortunately, doping liquid scintillators with QDs lowers the light yield as shown in Section \ref{ly_results} and discussed Section \ref{abs_emi_results}. Fortunately, this can be at least partially countered by choosing the emission peak to be at an optimal wavelength for the quantum efficiency of the photomultiplier tube (PMT)\cite{hamamatsupmt} The QDs of various emission and absorption spectra that undergo study for suitability are listed in Table \ref{quantum_dots_table}.
+Unfortunately, doping liquid scintillators with QDs comes at the cost of lower light yields as shown in Section \ref{ly_results} and discussed Section \ref{abs_emi_results}. Fortunately, this can be at least partially countered by choosing the emission peak to be at an optimal wavelength for the quantum efficiency of the photomultiplier tube (PMT)\cite{hamamatsupmt} The QDs of various emission and absorption spectra that undergo study for suitability are listed in Table \ref{quantum_dots_table}.
  
 \begin{table}
 \caption{Quantum-Dot composition and source information. \label{quantum_dots_table}}
@@ -154,7 +155,7 @@ As for the emission spectrum measurements of the QD samples, the cleaning proced
 
 \section{Results}
 \label{analysis_results_sec}
-This section presents the analysis methodology as well as the main results; namely the light yield measurements with varying PPO concentrations for each of the solvents listed in Table \ref{solvents_table} and for the different QDs listed in Table \ref{quantum_dots_table} dissolved in toluene with 2~g/L of PPO added. The emission and absorption spectrum of the QD scintillators are also explicitly examined.
+This section presents the analysis methodology as well as the main results; namely the light yield measurements with varying PPO concentrations for each of the solvents listed in Table \ref{solvents_table} and for the different QDs listed in Table \ref{quantum_dots_table} dissolved in toluene with 2~g/L of PPO added. The emission and absorption spectrum of the QD scintillators are also measured.
  
 \subsection{Light Yield}\label{ly_analysis_sec}
 \begin{figure}[tbh]
@@ -178,14 +179,14 @@ Multiple pulses are found for each waveform, including baseline fluctuations. Th
 
 
 \subsubsection{Investigation of Uncertainties}
-This section focuses on the reproducibility of a measurement utilizing the sample handle procedure defined in Section \ref{ly_setup_sec} in order to estimate the errors of a single measurement. 
+This section focuses on the reproducibility of a measurement and estimates the error of a single measurement based on the sample handle procedure defined in Section \ref{ly_setup_sec}. 
 
-First, the error due to differences in the procedure of coupling the scintillator cell to the PMT glass is checked. For this test, the same sample, LAB with 5~g/L PPO, is sealed in the cell and only the coupling is renewed. The RMS divided by the sample mean for several trials is 0.30~\%. This number is used as a rough estimate for the relative error of a single measurement due to differences in the coupling. The small uncertainty in the determination of the charge value from the histograms, Figure \ref{ChargeSpec_fig}, is already included here. The relative spread of 0.30~\% is negligible compared to other uncertainties discussed below.   
+The error due to differences in the procedure of coupling the scintillator cell to the PMT glass is measured. For this test, the same sample, LAB with 5~g/L PPO, is sealed in the cell and only the coupling is renewed. The RMS divided by the sample mean for several trials is 0.30~\%. This number is used as a rough estimate for the relative error of a single measurement due to differences in the coupling. The small uncertainty in the determination of the charge value from the histograms, Figure \ref{ChargeSpec_fig}, is already included here. The relative spread of 0.30~\% is negligible compared to other uncertainties discussed below.   
 
-The effect of oxygen is also studied quantitatively. A comparatively old sample, 24 days after mixing, of DIN HP with 5~g/L PPO is purged with nitrogen bubbles for 10 minutes as in the standard measurement procedure and is measured. Then the sample is opened and left in contact with oxygen for 15 minutes. It is then re-measured without nitrogen purging; the charge value dropped by 2.04~\%. After an additional ~3 hours of contact with oxygen the same is measured. The relative difference between the first and the last measurement is about 6.92~\%. This shows that the nitrogen purging and reproducible procedures in preventing oxygen from entering the scintillator are important. 
+The effect of oxygen is also studied quantitatively. A comparatively old sample, 24 days after mixing, of DIN HP with 5~g/L PPO is purged with nitrogen bubbles for 10 minutes as in the standard measurement procedure and is measured. Then the sample is opened and left in contact with oxygen for 15 minutes. It is then re-measured without nitrogen purging. The charge value dropped by 2.04~\%. After an additional ~3 hours of contact with oxygen the same is measured. The relative difference between the first and the last measurement is about 6.92~\%, indicating the importance of nitrogen purging and reproducible procedures in preventing oxygen from entering the scintillator. 
 
-In order to estimate the total error of a single light yield measurement, the same sample with the full sample change protocol, as described in Section \ref{ly_setup_sec}, is measured repeatedly. For these measurements an older sample, 7 weeks after mixing, of DIN HP is used as well as a standard DIN sample, 3-4 weeks old. For the older samples, 10 minutes of nitrogen purging is not sufficient to remove oxygen. The effect of differences in the oxygen removal is included in these reproducibility measurements. However, it is difficult to assess exactly how much oxygen affects the measurements when the full measurement protocol is applied. The RMS for these data sets 
-is regarded as a rough estimate of the relative uncertainty of a single light yield measurement. It is about 3.70~\%.
+In order to estimate the total error of a single light yield measurement, the same sample with the full sample change protocol, as described in Section \ref{ly_setup_sec}, is measured repeatedly. For these measurements an older sample, 7 weeks after mixing, of DIN HP is used as well as a standard DIN sample, 3-4 weeks old. For the older samples, 10 minutes of nitrogen purging is not sufficient to remove oxygen. The effect of differences in the oxygen removal is included in these reproducibility measurements. However, it is difficult to assess exactly how oxygen contamination affects the measurements when the full measurement protocol is applied. The RMS for these data sets 
+is is about 3.70~\% and is regarded as a rough estimate of the relative uncertainty of a single light yield measurement.
 
 \begin{figure}[tbh]
         \begin{center}
@@ -202,7 +203,7 @@ of PPO concentration in g/L. Concentrations of 0.5 g/L, 1 g/L, 2 g/L, 5 g/L, 10 
 been used. Tables \ref{ChargeResults_fig} and \ref{Toluene_ChargeResults_fig} include the fit results; the parameters p1, p2 and p3 describe the light yield normalization,
 the energy transfer from solvent to solute and the self-quenching effect, respectively.
 
-As clearly stated in Table \ref{Toluene_ChargeResults_fig}, toluene produces the highest light yield around 2.2~g/L. Since all of the QDs are dissolved in a toluene solution, and maximizing light yield a main objective, the QD scintillators are doped with 2~g/L PPO for comparison with 2~g/L PPO in toluene. The light yield as a function of QD emission wavelength is plotted in Figure \ref{ly_QD}.
+As clearly stated in Table \ref{Toluene_ChargeResults_fig}, toluene produces the highest light yield around 2.2~g/L.  QD scintillators are doped with 2~g/L PPO for comparison with 2~g/L PPO in toluene. The light yield as a function of QD emission wavelength is plotted in Figure \ref{ly_QD}.
 
 \begin{table}
 \caption{Listed below are the fit results for each solvent's data set. The fit parameters and their errors are given and their respective $\chi^{2}$ values, and the probabilities to get a worse $\chi^{2}$ than the observed one. Since we have 6 data points and 3 parameters in the fit the number of degrees of freedom is 3. \label{fitresult_table}}
@@ -257,14 +258,16 @@ As clearly stated in Table \ref{Toluene_ChargeResults_fig}, toluene produces the
 \subsection{Emission and Aborption Spectrum of Quantum-Dot Doped Liquid Scintillators}
 
 \subsubsection{Signal Analysis}
-Various trials are conducted to test the output signal of both the Perkin Elmer Lambda 25 UV/Vis and the Shimadzu UV3101 spectrophotometers\cite{lindley13}. The error is defined in terms of the relative intensities of the beam before transiting the quartz cell, $I(0)$, and after it passes through the cell, $I(x)$; the relationship is given by equation \ref{Absorption_equ}.
+Various trials are conducted to test the output signal of both the Perkin Elmer Lambda 25 UV/Vis and the Shimadzu UV3101 spectrophotometers\cite{lindley13}. The error is described by the following equation:
+ \ref{Absorption_equ}.
 
 \begin{equation}
 \label{Absorption_equ}
 A(x)=\log_{10}\Big(\frac{I(x)}{I(0)}\Big)
 \end{equation}
+where  $I(0)$ is the intensity of the beam before transiting the quartz cell and $I(x)$ is the intensity after it passes through the cell. 
 
-The errors for the Perkin and Shimadzu spectrophotometers are measured to be $A=\pm0.00075$ and $A=\pm0.002$ respectfully. These errors are in close agreement with the manufactures specifications\cite{?}.
+The errors for the Perkin and Shimadzu spectrophotometers are $A=\pm0.00075$ and $A=\pm0.002$ respectfully. These errors are in close agreement with the manufactures specifications\cite{?}.
 
 \subsubsection{Absorption and Emission Results}\label{abs_emi_results}
 The absorption and emission spectrum of the QDs were extensively probed, and the results are graphed in Figures \ref{abs_spec} and \ref{emi_spec} respectfully. As stated in Section \ref{qd_sec} and proved in \ref{ly_results}, the light yield of the QD doped scintillators is much lower than that of just toluene with PPO. This is due to the overlap in emission and absorption QD spectrum coupled with low quantum efficiency \cite{lindley14}. (I'm creating a figure that shows the overlap for emission and absorption for each quantum dot). The absorption spectrum of the QD doped liquid scintillators are clearly narrower than that of toluene doped with 2 g/L PPO.
@@ -299,7 +302,7 @@ The absorption and emission spectrum of the QDs were extensively probed, and the
 \section{Conclusion}
 Detection of low energy events in liquid scintillators require high light yield and preservation of Cherenkov radiation. This study  successfully measures and models the light yield of seven scintillator liquids as a function of wavelength-shifter concentration in order to find the maximum light yield of each candidate. Furthermore, an extensive study on the effects of quantum-dot doping of toluene with 2 g/L of PPO in solution are analyzed. QDs are able to reduce the width and tune the location of the absorption spectrum peak. This allows the quantum efficiency of the photocathode to be matched and minimized the amount of Cherenkov radiation absorbed by the liquid scintillator.
 
-Overall, the results of the light yield trials are immediately useful. Regrettable, the quantum-dots reduce the light yield significantly which means that the Cherenkov photon recovered from utilization of the QD are not worth it; however, new quantum-dots with higher quantum efficiency and larger separation of absorption and emission peaks are developed constantly.  
+Regrettably,QDs significantly reduce the light yield of scintillators. With improved technology in quantum dot production, QDs with better characteristics such as shorter emission wavelengths are expected to become available in the near future. These QDs should be able to improve the light yield of quantum dot-doped scintillator. 
 
 
 \begin{thebibliography}{35}
