--- a/ScintillatorPaper/ScintillatorPaper.tex
+++ b/ScintillatorPaper/ScintillatorPaper.tex
@@ -11,7 +11,7 @@
 %%\llap{$^c$}University of California, Berkeley, Berkeley, CA 94704, USA\\
 E-mail: \email{rschofield@physics.ucla.edu}}
 
-\abstract{Liquid scintillator can be made more sensitive to low energy events by increasing light yield and enabling direction reconstruction of particles. This study measures the light yield of seven different scintillators (Toluene, Pseudocumene (PC), Linear Alkyl Benzene (LAB), Phenylcyclohexane (PCH), Phenyl-o-Xylyl Ethane (PXE) and two grades of Di-Isopropyl Napthalene (DIN)), and models the light yield as a function of the concentration of wavelength-shifter 2,5-Diphenyloxazole (PPO) in order to determine the optimal PPO concentration for each solvent. In addition, the optical properties of 2~g/L PPO in toluene doped with quantum-dots (QDs) are measured. QDs' ability to fine-tune the absorption and emission spectrum of liquid scintillators demonstrate that QDs are viable candidates for conserving the Cherenkov photons produced by interactions in the liquid scintillator.}
+\abstract{Liquid scintillator-based detectors can be made more sensitive to low energy events by increasing light yield of the scintillator and enabling direction reconstruction of particles. This study measures the light yield of seven different scintillators (Toluene, Pseudocumene (PC), Linear Alkyl Benzene (LAB), Phenylcyclohexane (PCH), Phenyl-o-Xylyl Ethane (PXE) and two grades of Di-Isopropyl Napthalene (DIN)), and models the light yield as a function of the concentration of wavelength-shifter 2,5-Diphenyloxazole (PPO) in order to determine the optimal PPO concentration for each solvent. In addition, the optical properties of 2~g/L PPO in toluene doped with quantum-dots (QDs) are measured. QDs' ability to fine-tune the absorption and emission spectrum of liquid scintillators demonstrate that QDs are viable candidates for conserving the Cherenkov photons produced by interactions in the liquid scintillator.}
 
 \begin{document}
 
