--- a/ScintillatorPaper/ScintillatorPaper.tex
+++ b/ScintillatorPaper/ScintillatorPaper.tex
@@ -11,7 +11,7 @@
 %%\llap{$^c$}University of California, Berkeley, Berkeley, CA 94704, USA\\
 E-mail: \email{rschofield@physics.ucla.edu}}
 
-\abstract{Liquid scintillator-based detectors can be made more sensitive to low energy events by increasing light yield of the scintillator and enabling direction reconstruction of particles. This study measures the light yield of seven different scintillators (Toluene, Pseudocumene (PC), Linear Alkyl Benzene (LAB), Phenylcyclohexane (PCH), Phenyl-o-Xylyl Ethane (PXE) and two grades of Di-Isopropyl Napthalene (DIN)), and models the light yield as a function of the concentration of wavelength-shifter 2,5-Diphenyloxazole (PPO) in order to determine the optimal PPO concentration for each solvent. In addition, the optical properties of 2~g/L PPO in toluene doped with quantum-dots (QDs) are measured. QDs' ability to fine-tune the absorption and emission spectrum of liquid scintillators demonstrate that QDs are viable candidates for conserving the Cherenkov photons produced by interactions in the liquid scintillator.}
+\abstract{Liquid scintillator-based detectors can be made more sensitive to low energy events by increasing light yield of the scintillator and enabling direction reconstruction of particles. This study presents the optimal concentration of wavelength-shifter 2,5-Diphenyloxazole (PPO) in various solvents.  The researchers measured the light yield of seven different scintillators (Toluene, Pseudocumene (PC), Linear Alkyl Benzene (LAB), Phenylcyclohexane (PCH), Phenyl-o-Xylyl Ethane (PXE) and two grades of Di-Isopropyl Napthalene (DIN)), and modeled the light yield as a function of the concentration of PPO. In addition, the optical properties of 2~g/L PPO in toluene doped with quantum-dots (QDs) are measured. QDs' ability to fine-tune the absorption and emission spectrum of liquid scintillators demonstrate that QDs are viable candidates for conserving the Cherenkov photons produced by interactions in the liquid scintillator.}
 
 \begin{document}
 
@@ -34,7 +34,7 @@ E-mail: \email{rschofield@physics.ucla.edu}}
 %Currently, there are two liquid scintillator 0$\nu\beta\beta$ experiments that are running or will be running in the near future: KamLAND-Zen \cite{kamlandzen13} has already set a competitive limit for the 0$\nu\beta\beta$ half-life of $^{136}$Xe, and the SNO+ experiment with $^{130}$Te is under construction \cite{snoplus10,hartnell12}. Liquid scintillators can be scaled easily to large volumes, and increasing the volume to surface area ratio of the detector can minimize external backgrounds. Energy resolution is crucial in order to obtain sufficient separation between signal and background, including the irreducible background from 2$\nu\beta\beta$. The light yield is directly linked to the energy resolution in liquid scintillator detectors. This work contributes to the effort of optimizing the light yield of candidate scintillator mixtures, including QD doped scintillators. QDs may even help reduce the background further by allowing reconstruction of events via Cherenkov radiation in the scintillator which will allow background signals to be rejected.
 
 \subsection{Liquid Scintillators}
-When charged particles propagate through a scintillator, electrons in the $\pi$-bonds of the aromatic rings are readily excited \cite{birks64}. Due to high abundance of solvent molecules, interaction with solvent molecules is likely. The absorption and emission spectra of a single-molecule based scintillator overlap. In order to prevent degradation of efficiency due to the reabsorption by the scintillator of scintillation light, the scintillator is mixed with a wavelength shifter that absorbs the energy from the excited electron and subsequently releases light of a longer wavelength to which the scintillator is more transparent. Light yield, the number of photons produced per deposited energy, is a vital property of the scintillator because it relates directly to the energy resolution a scintillator-based detector. Optimizing the energy transfer between solvent and solute molecules maximizes the light yield.
+When charged particles propagate through a scintillator, electrons in the $\pi$-bonds of the aromatic rings are readily excited \cite{birks64}. The absorption and emission spectra of a single-molecule based scintillator overlap. In order to prevent degradation of efficiency due to the reabsorption by the scintillator of scintillation light, the liquid scintillator (a solute) is mixed with a wavelength shifter (a solvent) that absorbs the energy from the excited electron and subsequently releases light of a longer wavelength to which the scintillator is more transparent. Light yield, the number of photons produced per deposited energy, is a vital property of the scintillator because it relates directly to the energy resolution a scintillator-based detector. Optimizing the energy transfer between solvent and solute molecules maximizes the light yield.
 
 \begin{table}
 \caption{Solvents and solute names or abbreviations used in this paper, the corresponding IUPAC names, CAS numbers and information on the source of the chemicals. \label{solvents_table}}
@@ -72,19 +72,20 @@ When charged particles propagate through a scintillator, electrons in the $\pi$-
 
 % One of the overarching themes of this paper is to identify solvents with generally high light yields and the light yield dependences on solute concentration. The candidates we studied are listed in table \ref{solvents_table}. PPO is used as a wavelength-shifter. 
  
-In addition to measuring the light yield of the various liquid scintillator candidates listed in Table \ref{solvents_table}, the concentration of PPO (the solute) in each scintillator candidate is varied and the relative light yields of these binary scintillator mixtures are compared. PPO concentration effects the light yield through two competing mechanisms. The efficiency of energy transfer from solvent to solute increases with increasing PPO concentration. At the studied PPO concentrations, the energy transfers are predominantly non-radiative F\"orster energy transfers \cite{foerster48,foerster59}, but the emission and re-absorption of real photons or collision energy transfer and others \cite{dexter53} also contribute to the overall effective energy transfer rate. There also is the effect of self-quenching \cite{birks64} which becomes more important at higher PPO concentrations. In this process two PPO molecules interact with each other and no light is emitted. The light yield $I(c_{PPO})$ as a function of PPO concentration $c_{PPO}$ can be described by 
+In addition to measuring the light yield of the various liquid scintillator candidates listed in Table \ref{solvents_table}, the concentration of the wavelength shifter PPO in each scintillator candidate is varied and the relative light yields of these binary scintillator mixtures are compared. PPO concentration affects the light yield through two competing mechanisms. The efficiency of energy transfer from solvent to solute increases with increasing PPO concentration. At the studied PPO concentrations, the energy transfers are predominantly non-radiative F\"orster energy transfers \cite{foerster48,foerster59}, but the emission and re-absorption of real photons or collision energy transfer and others \cite{dexter53} also contribute to the overall effective energy transfer rate. There also is the effect of self-quenching \cite{birks64} which becomes more important at higher PPO concentrations. In this process two PPO molecules interact with each other and no light is emitted. 
+The light yield $I(c_{PPO})$ as a function of PPO concentration $c_{PPO}$ can be described by the equation 
 \begin{equation}
 \label{fit_eq}
 I(c_{PPO})=p_1 \cdot \frac{1}{1+p_2/c_{PPO}} \cdot \frac{1}{1+p_3\cdot c_{PPO}}
 \end{equation} 
-with three solvent-specific parameters $p_1$, $p_2$ and $p_3$. For details on the derivation of these types of equations see \cite{buck07,aberle11} and references therein. The maximum light yield without self-quenching is characterized by $p_1$, the effectiveness of energy transfer from solvent molecules to solute molecules corresponds to $p_2$ and the effect of self-quenching is described by $p_3$.
+where $p_1$, $p_2$ and $p_3$ are three solvent specific parameters: $p_1$ characterizes the maximum light yield without self-quenching, $p_2$ the effectiveness of energy transfer from solvent molecules to solute molecules, and $p3$ the effect of self-quenching. For details on the derivation of these types of equations see \cite{buck07,aberle11} and references therein. 
 
 \subsection{Quantum-Dots}\label{qd_sec}
-Quantum-Dots are semiconducting nanocrystals. The size of a QD is inversely proportional to its band gap and therefore proportional to the wavelength of light it absorbs and emits. Doping scintillator with QDs enables the absorbed and emitted wavelength to be tuned and ultimately can be used to minimize background signals by obtaining a directional signal from low energy events through the following process \cite{lindley14}.
+Quantum-Dots are semiconducting nanocrystals. The size of a QD is inversely proportional to its band gap and therefore proportional to the wavelength of light it absorbs and emits. Doping scintillator with QDs enables the absorbed and emitted wavelength to be fine tuned, and can be used as a tool to obtain a directional signal from particles and thus to reduce background signals.
 
 Cherenkov radiation is emitted whenever a charged particle travels through a medium at a speed greater than the phase velocity of light in that medium. Unlike scintillation light that is emitted isotropically, Cherenkov light is radiated in a cone that contains the directional information of the incident particle. Cherenkov light is multi-chromatic and has a broad energy distribution. Doping the scintillator with QDs that absorb and emit only high energy photons enables the longer wavelengths of Cherenkov light to travel toward the detector unimpeded by the scintillation process. Because long wavelengths travel faster than short wavelengths of light in a medium due to chromatic dispersion and because the scintillation absorption and emission process takes time, the long wavelengths of Cherenkov light will reach the detector before the scintillation light, enabling measurement of Cherenkov light and ultimately directional reconstruction of particle trajectory.  Furthermore, adding QDs to the scintillator solvent generally narrows the absorption spectrum of the liquid scintillator. Narrowing the absorption spectrum of the scintillator is important because for low energy events, there are very few long-wavelength photons emitted. For example, a 1~MeV electron emits only 83 Cherenkov photons between 370-550 nm\cite{lindley14}. 
 
-Unfortunately, doping liquid scintillators with QDs comes at the cost of lower light yields as shown in Section \ref{ly_results} and discussed Section \ref{abs_emi_results}. Fortunately, this can be at least partially countered by choosing the emission peak to be at an optimal wavelength for the quantum efficiency of the photomultiplier tube (PMT)\cite{hamamatsupmt} The QDs of various emission and absorption spectra that undergo study for suitability are listed in Table \ref{quantum_dots_table}.
+Unfortunately, doping liquid scintillators with QDs comes at the cost of lower light yields as shown in Section \ref{ly_results} and discussed Section \ref{abs_emi_results}. Fortunately, this can be partially countered by choosing the emission peak to match the optimal wavelength for the quantum efficiency of the photomultiplier tube (PMT)\cite{hamamatsupmt}. The QDs of various emission and absorption spectra that undergo study for suitability are listed in Table \ref{quantum_dots_table}.
  
 \begin{table}
 \caption{Quantum-Dot composition and source information. \label{quantum_dots_table}}
@@ -130,12 +131,12 @@ The setup is illustrated in Figure \ref{setup_fig}. A (1~cm$\times$1~cm$\times$3
 \subsubsection{Sample Handling and Procedure}
 In order to ensure reproducible and accurate measurements, a sample handling procedure is defined. In particular, contamination of the samples with dust, residual chemicals and oxygen is avoided.  
 
-The bottles which store the samples are rinsed with isopropanol, cyclohexane, dried and finally rinsed with the solvent. In addition, the bottles are sealed under N$_{2}$ to reduce the amount of oxygen in contact with the sample. Oxygen interferes with the light production processes (oxygen quenching \cite{birks64}) and leads to a loss of light output. The lids of the bottles are sealed with Teflon tape and electric tape to further limit the amount of oxygen entering the bottle. 
+The bottles that store the samples are rinsed with isopropanol, cyclohexane, dried and finally rinsed with the solvent. In addition, the bottles are sealed under N$_{2}$ to reduce the amount of oxygen in contact with the sample. Oxygen interferes with the light production processes (oxygen quenching \cite{birks64}) and leads to a loss of light output. The lids of the bottles are sealed with Teflon tape and electric tape to further limit the amount of oxygen entering the bottle. 
 
  As for the measurement, the quartz cell is cleaned thoroughly when samples are changed. The optical grease on the outside is removed with ethanol and on the inside it is washed with isopropanol then dried with N$_{2}$ twice, washed with cyclohexane, and again dried with N$_{2}$. The amount of liquid scintillator sample in the cell is kept constant to avoid effects due to differences in light collection. Before each measurement, a pipet is inserted into the liquid to slowly purge the samples with nitrogen for about 10 minutes to actively remove remaining oxygen. 
 
 %For the PPO scans, samples not older than 4 days after mixing were used to minimize long-term irreversible effects of contact with spurious oxygen. 
-The coupling of the cell to the PMT is done consistently, and the PMT is aligned in the same way in order to avoid effects due to the earth's magnetic field. Section \ref{ly_analysis_sec} presents the studies that determine how reproducible the measurements are when these procedures are applied.  The quartz cell containing the liquid scintillator sample is then placed in the dark box setup as described in the previous section, and a measurement is performed for a duration of 30 minutes.
+The coupling of the cell to the PMT is done consistently, and the PMT is aligned in the same way in order to avoid effects due to the earth's magnetic field. Section \ref{ly_analysis_sec} presents the studies that determine measurement reproducibility.  The quartz cell containing the liquid scintillator sample is placed in the dark box setup as described in the previous section, and a measurement is performed for a duration of 30 minutes.
  
 \begin{figure}[tbh]
         \begin{center}
@@ -146,16 +147,16 @@ The coupling of the cell to the PMT is done consistently, and the PMT is aligned
 
 \subsection{Absorption and Emission Setup}
 \subsubsection{Setup}
-Two spectrophotometers are utilized in this experiment: a Perkin Elmer Lambda 25 UV/Vis for measuring the emission spectrum and a Shimadzu UV3101 for measuring absorption spectrum of the QD doped liquid scintillators. The instruments work via a double-beam setup; the beams are comprised of white light produced by a deuterium UV lamp and a halogen lamp. \cite{|}
+A Perkin Elmer Lambda 25 UV/Vis is used for measuring the emission spectrum and a Shimadzu UV3101 for measuring absorption spectrum of the QD doped liquid scintillators. The instruments work via a double-beam setup. White light from deuterium UV lamp and a halogen lamp produce the beams. \cite{|}
 
 \subsubsection{Sample Handling and Procedure}
-To measure the absorption spectrum of each quantum-dot sample, the following procedure is executed. A (1~cm$\times$1~cm$\times$3.5~cm) UV-transparent quartz cell (Starna 21-Q-10 \cite{starnacells}) is rinsed with toluene to dissolve any residue on the wall. Next, the cell is soaked in hydrochloric acid for 5 minutes to clean the cell and destroy any remaining QD. To wash away the hydrochloric acid and the residue QD constituents, the quartz cell is rinsed with distilled water and is then subjected to three iterations of liquid isopropyl alcohol evaporated by nitrogen gas. Since all of the QD samples are dissolved in toluene, a background absorption spectrum analysis is required to isolate the quantum-dot spectrum. Thus, the quartz vile is filled with toluene. The cell is then placed into the Shimadzu UV3101, and a background scan is performed. Next, the toluene is removed from the cell and replaced by the QD sample of choice. Finally, The sample is inserted back into the spectrophotometer, and a scan is initiated. % This is repeated for each QD candidate listed in \ref{quantum_dots_table}.
+To measure the absorption spectrum of each quantum-dot sample, the following procedure is executed. A (1~cm$\times$1~cm$\times$3.5~cm) UV-transparent quartz cell (Starna 21-Q-10 \cite{starnacells}) is rinsed with toluene to dissolve any residue on the wall. Next, the cell is soaked in hydrochloric acid for 5 minutes to clean the cell and destroy any remaining QD. To wash away the hydrochloric acid and the residue QD constituents, the quartz cell is rinsed with distilled water and is then subjected to three iterations of liquid isopropyl alcohol evaporated by nitrogen gas. Since all of the QD samples are dissolved in toluene, a background absorption spectrum analysis is required to isolate the quantum-dot spectrum.  The cell is filled wplaced into the Shimadzu UV3101, and a background scan is performed. Next, the toluene is removed from the cell and replaced by the QD sample of choice. Finally, The sample is inserted back into the spectrophotometer, and a scan is initiated. % This is repeated for each QD candidate listed in \ref{quantum_dots_table}.
 
-As for the emission spectrum measurements of the QD samples, the cleaning procedure is exactly the same as for the absorption trials; the only difference is that the emission spectrum is measured by a Perkin Elmer Lambda 25 UV/Vis which does not require a background toluene scan. 
+The cleaning procedure for the emission spectrum measurements is the same as the procedure for the absorption trials. The emission spectrum is measured by a Perkin Elmer Lambda 25 UV/Vis and does not require a background toluene scan. 
 
 \section{Results}
 \label{analysis_results_sec}
-This section presents the analysis methodology as well as the main results; namely the light yield measurements with varying PPO concentrations for each of the solvents listed in Table \ref{solvents_table} and for the different QDs listed in Table \ref{quantum_dots_table} dissolved in toluene with 2~g/L of PPO added. The emission and absorption spectrum of the QD scintillators are also measured.
+This section presents the analysis methodology as well as the main results, namely the light yield measurements as a function of PPO concentrations for each of the solvents listed in Table \ref{solvents_table} and for the different QDs listed in Table \ref{quantum_dots_table} dissolved in toluene with 2~g/L of PPO added. The emission and absorption spectrum of the QD scintillators are also measured.
  
 \subsection{Light Yield}\label{ly_analysis_sec}
 \begin{figure}[tbh]
@@ -174,8 +175,8 @@ This section presents the analysis methodology as well as the main results; name
 \item Charge: The integral of the baseline-subtracted waveform between the start and stop times.  
 \end{itemize}
 
-The duration of each run is around thirty minutes and during this time on the order of $3\cdot10^5$ waveforms are recorded. Each pulse corresponds to one gamma ray that interacted within the liquid scintillator sample. The amount of light collected by the PMT is dependent on the scattering angle of the electron that is produced by Compton scattering of the 0.662 MeV gamma ray. The result of the charge calculation is placed in a histogram, Figure \ref{ChargeSpec_fig}. Since the Compton effect is the dominant mechanism, this histogram is a Compton spectrum. The events where the Compton scattered electron obtained close to the maximal energy, 478~keV for the 662~keV gammas from $^{137}$Cs, is associated with events at the right end of this spectrum. %Since we are interested in the largest pulses close to the Compton edge we can simply use the charges of all the pulses.
-Multiple pulses are found for each waveform, including baseline fluctuations. The small fake pulses from baseline fluctuations did not affect analysis. In order to compare different scintillator mixtures, the charge where the number of events dropped to half of the Compton edge maximum is compared, Figure \ref{ChargeSpec_fig}. This quantity is proportional to the scintillator light yield. For practical reasons and because this study only looks at relative light yield, arbitrary charge units are used instead of real charge units.
+The duration of each run is around thirty minutes and during this time on the order of $3\cdot10^5$ waveforms are recorded. Each pulse corresponds to one gamma ray interacation within the liquid scintillator sample. The amount of light collected by the PMT is dependent on the scattering angle of the electron that is produced by Compton scattering of the 0.662 MeV gamma ray. The result of the charge calculation is placed in a histogram, Figure \ref{ChargeSpec_fig}. Since the Compton effect is the dominant mechanism, this histogram is a Compton spectrum. The events where the Compton scattered electron obtained close to the maximal energy, 478~keV for the 662~keV gammas from $^{137}$Cs, is associated with events at the right end of this spectrum. %Since we are interested in the largest pulses close to the Compton edge we can simply use the charges of all the pulses.
+Multiple pulses are found for each waveform, including baseline fluctuations. The small fake pulses from baseline fluctuations did not affect analysis. In order to compare different scintillator mixtures, the charge where the number of events dropped to half of the Compton edge maximum is compared, Figure \ref{ChargeSpec_fig}. This quantity is proportional to the scintillator light yield. For practical reasons and because this study only looks at relative light yield, results are presented in arbitrary charge units instead of real charge units.
 
 
 \subsubsection{Investigation of Uncertainties}
@@ -183,7 +184,7 @@ This section focuses on the reproducibility of a measurement and estimates the e
 
 The error due to differences in the procedure of coupling the scintillator cell to the PMT glass is measured. For this test, the same sample, LAB with 5~g/L PPO, is sealed in the cell and only the coupling is renewed. The RMS divided by the sample mean for several trials is 0.30~\%. This number is used as a rough estimate for the relative error of a single measurement due to differences in the coupling. The small uncertainty in the determination of the charge value from the histograms, Figure \ref{ChargeSpec_fig}, is already included here. The relative spread of 0.30~\% is negligible compared to other uncertainties discussed below.   
 
-The effect of oxygen is also studied quantitatively. A comparatively old sample, 24 days after mixing, of DIN HP with 5~g/L PPO is purged with nitrogen bubbles for 10 minutes as in the standard measurement procedure and is measured. Then the sample is opened and left in contact with oxygen for 15 minutes. It is then re-measured without nitrogen purging. The charge value dropped by 2.04~\%. After an additional ~3 hours of contact with oxygen the same is measured. The relative difference between the first and the last measurement is about 6.92~\%, indicating the importance of nitrogen purging and reproducible procedures in preventing oxygen from entering the scintillator. 
+The effect of oxygen is also studied quantitatively. A comparatively 24-day old sample of DIN HP with 5~g/L PPO is purged with nitrogen bubbles for 10 minutes as in the standard measurement procedure and is measured. Then the sample is opened and left in contact with oxygen for 15 minutes. It is then re-measured without nitrogen purging. The charge value dropped by 2.04~\%. After an additional ~3 hours of contact with oxygen the same is measured. The relative difference between the first and the last measurement is about 6.92~\%, indicating the importance of nitrogen purging and reproducible procedures in preventing oxygen from entering the scintillator. 
 
 In order to estimate the total error of a single light yield measurement, the same sample with the full sample change protocol, as described in Section \ref{ly_setup_sec}, is measured repeatedly. For these measurements an older sample, 7 weeks after mixing, of DIN HP is used as well as a standard DIN sample, 3-4 weeks old. For the older samples, 10 minutes of nitrogen purging is not sufficient to remove oxygen. The effect of differences in the oxygen removal is included in these reproducibility measurements. However, it is difficult to assess exactly how oxygen contamination affects the measurements when the full measurement protocol is applied. The RMS for these data sets 
 is is about 3.70~\% and is regarded as a rough estimate of the relative uncertainty of a single light yield measurement.
@@ -198,9 +199,7 @@ is is about 3.70~\% and is regarded as a rough estimate of the relative uncertai
 \subsubsection{Light Yield Results}\label{ly_results}
 Table \ref{fitresult_table} contains the light yield results for the different liquid scintillator candidates described in Table \ref{solvents_table}.
 
-In Figure \ref{fitresult_table}, each plot shows the solvent's characteristic charge at the Compton edge as a function
-of PPO concentration in g/L. Concentrations of 0.5 g/L, 1 g/L, 2 g/L, 5 g/L, 10 g/L and 50 g/L have
-been used. Tables \ref{ChargeResults_fig} and \ref{Toluene_ChargeResults_fig} include the fit results; the parameters p1, p2 and p3 describe the light yield normalization,
+In Figure \ref{fitresult_table}, each plot shows the solvent's characteristic charge at the Compton edge as a function of PPO concentration in g/L. Concentrations of 0.5 g/L, 1 g/L, 2 g/L, 5 g/L, 10 g/L and 50 g/L have been used. Tables \ref{ChargeResults_fig} and \ref{Toluene_ChargeResults_fig} include the fit results; the parameters p1, p2 and p3 describe the light yield normalization,
 the energy transfer from solvent to solute and the self-quenching effect, respectively.
 
 As clearly stated in Table \ref{Toluene_ChargeResults_fig}, toluene produces the highest light yield around 2.2~g/L.  QD scintillators are doped with 2~g/L PPO for comparison with 2~g/L PPO in toluene. The light yield as a function of QD emission wavelength is plotted in Figure \ref{ly_QD}.
